# Ares

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  LICENSE  README.md
config/: ares.json.example  sdr_bt2020_config.json
config/presets/: bright_room.json  cinema.json
docs/: BUILDING.md  CONFIGURATION.md  FEATURES.md  FEATURE_COMPARISON.md  HARDWARE.md  HARDWARE_SETUP_STATUS.md  IMPLEMENTATION_STATUS.md  MADVR_FEATURES.md  NLS_INTEGRATION.md  RECEIVER_INTEGRATION.md  REMOTE_ACCESS.md  TESTING.md  hybrid_black_bar_detection.md
examples/: receiver_volume_example.cpp
include/ares/: ares_config.h  display_config.h  osd_config.h  processing_config.h  types.h  version.h
scripts/: install_dependencies.sh  setup_system.sh
src/: main.cpp
src/capture/: CMakeLists.txt  decklink_capture.cpp  decklink_capture.h  frame_buffer.cpp  frame_buffer.h
src/config/: CMakeLists.txt  config_manager.cpp  config_manager.h
src/core/: CMakeLists.txt  logger.cpp  logger.h  thread_pool.cpp  thread_pool.h
src/display/: CMakeLists.txt  drm_display.cpp  drm_display.h  edid_parser.cpp  edid_parser.h  frame_rate_matcher.cpp  frame_rate_matcher.h  vulkan_presenter.cpp  vulkan_presenter.h
src/input/: CMakeLists.txt  input_manager.cpp  input_manager.h  ir_remote.cpp  ir_remote.h  receiver_control.cpp  receiver_control.h
src/osd/: CMakeLists.txt  menu_system.cpp  menu_system.h  osd_config.cpp  osd_renderer.cpp  osd_renderer.h  vulkan_osd.cpp  vulkan_osd.h
src/processing/: CMakeLists.txt  black_bar_detector.cpp  black_bar_detector.h  nls_shader.cpp  nls_shader.h  placebo_renderer.cpp  placebo_renderer.h  processing_pipeline.cpp  processing_pipeline.h  scene_analyzer.cpp  scene_analyzer.h  vulkan_context.cpp  vulkan_context.h
src/sync/: CMakeLists.txt  frame_scheduler.cpp  frame_scheduler.h  master_clock.cpp  master_clock.h
systemd/: ares.service
tests/: CMakeLists.txt  test_capture.cpp  test_display.cpp  test_processing.cpp
tools/: CMakeLists.txt  test_osd.cpp
